JSAI/error/src/test/resources/base/ke003.js
var x = {a:""}
for(x.a in {1:1, 2:2});
print(x.a);


print("");




var i=0;
x=[];
for(x[print("here"),i++] in {"key1": true, "key2": true});

for(var j in x) {
  var out = j + ":" + x[j];
  print(out);
}


for(undefined in {0:1}) print("x");
